--- a/px-context-browser-column-item.html
+++ b/px-context-browser-column-item.html
@@ -99,7 +99,7 @@
     ],
 
     _contextChanged: function() {
-      console.log('this.columnItem.selected: ', this.columnItem.selected);
+      //console.log('this.columnItem.selected: ', this.columnItem.selected);
     },
 
     _columnItemChanged: function() {
