--- a/px-breadcrumbs.html
+++ b/px-breadcrumbs.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html"/>
 <link rel="import" href="px-context-browser-behaviors.html"/>
 
-<dom-module id="px-context-browser-breadcrumbs">
+<dom-module id="px-breadcrumbs">
   <link rel="import" type="css" href="css/px-context-browser.css" />
   <template>
     <ul class="breadcrumbs list-inline list-inline--delimited u-pv-">
@@ -14,7 +14,7 @@
   </template>
   <script>
     Polymer({
-      is: 'px-context-browser-breadcrumbs',
+      is: 'px-breadcrumbs',
       behaviors: [PxContextBrowserBehaviors],
       properties: {
         /**
